--- a/src/style.css
+++ b/src/style.css
@@ -11,35 +11,46 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 200dvh;
+}
+
+section {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100dvh;
-  background-color: #ffffff;
+  background-color: #333333;
 }
 
 h2 {
-  position: relative;
-  font-size: 3em;
-  letter-spacing: 0.25em;
-  text-transform: uppercase;
-  font-weight: 500;
-  color: #ffffff20;
-
-  span {
-    position: relative;
-    animation: animate-text 1s linear infinite;
-  }
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-size: 10em;
 }
 
-@keyframes animate-text {
-  0%,
-  20% {
-    color: #00000050;
-  }
-  21%,
-  79% {
-    color: #e1ff00;
-  }
-  80%,
-  100% {
-    color: #00000050;
-  }
+.circle1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #22e7c0;
+  clip-path: circle(150px at 0 0);
+}
+
+.circle2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #ff4500;
+  clip-path: circle(150px at 100% 100%);
+}
+
+.circle1 h2,
+.circle2 h2 {
+  color: transparent;
+  -webkit-text-stroke: 5px #333333;
 }
