--- a/src/style.css
+++ b/src/style.css
@@ -11,46 +11,109 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200dvh;
-}
-
-section {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  background-color: #336699;
   height: 100dvh;
-  background-color: #333333;
 }
 
-h2 {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  text-align: center;
-  color: #ffffff;
-  font-size: 10em;
+.navigation {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.circle1 {
+.toggle {
+  position: relative;
+  width: 75px;
+  height: 75px;
+  background-color: #663399;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transform: translateY(-30px);
+  border: 8px solid #336699;
+  z-index: 10;
+
+  &.active {
+    &::before {
+      transform: rotate(225deg);
+    }
+
+    & ~ .menu {
+      width: 360px;
+      height: 70px;
+      transform: translateY(0px);
+      transition-delay: 0s, 0.5s, 0.5s;
+
+      ul {
+        li {
+          opacity: 1;
+          transform: translateY(0px);
+          transition-delay: calc(0.75s + var(--i));
+        }
+      }
+    }
+  }
+
+  &::before {
+    content: "+";
+    position: absolute;
+    font-size: 3em;
+    color: #ffffff;
+    transition: all 1.5s;
+  }
+}
+
+.menu {
+  width: 60px;
+  height: 60px;
+  background-color: #ffffff;
   position: absolute;
+  border-radius: 70px;
+  transform: translateY(-30px);
+  transition: transform 0.5s, width 0.5s, height 0.5s;
+  transition-delay: 1s, 0.5s, 0.5s;
+
+  ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+    line-height: 80px;
+    list-style: none;
+  }
+
+  li {
+    cursor: pointer;
+    transform: translateY(-30px);
+    transition: all 0.25s;
+    width: 32px;
+    opacity: 0;
+    transition-delay: var(--i);
+
+    &:hover {
+      a {
+        color: #663399;
+      }
+    }
+
+    &:nth-child(3) {
+      width: 40px;
+    }
+
+    a {
+      display: block;
+      font-size: 1.7em;
+      text-decoration: none;
+      color: #555555;
+    }
+  }
+}
+
+svg {
   width: 100%;
   height: 100%;
-  background-color: #22e7c0;
-  clip-path: circle(150px at 0 0);
-}
-
-.circle2 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #ff4500;
-  clip-path: circle(150px at 100% 100%);
-}
-
-.circle1 h2,
-.circle2 h2 {
-  color: transparent;
-  -webkit-text-stroke: 5px #333333;
 }
